--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,7 @@
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
+/* yt padding fix */
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root {
